--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -18,6 +18,12 @@ jobs:
         run: |
           # note: fixed filename to "dragon.txt" (you had "gragon.txt" which may be a typo)
           cowsay -f dragon "Run cover, I am a DRAGON.....RAWR" >> dragon.txt
+      - name: Test File Exists
+        run: grep -i "dragon" dragon.txt
+
+      - name: Read File
+        run: cat dragon.txt
+
       - name: Upload output
         uses: actions/upload-artifact@v4
         with:
