--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -23,17 +23,19 @@ jobs:
         run: sleep 30
 
   build_job_2:
-      runs-on: ubuntu-latest
-      steps:
-        - name: sleep for 10 seconds
-          run: sleep 10
+    needs: build_job_1
+    runs-on: ubuntu-latest
+    steps:
+      - name: sleep for 10 seconds
+        run: sleep 10
 
-        - name: Test File Exists
-          run: grep -i "dragon" dragon.txt
+      - name: Test File Exists
+        run: grep -i "dragon" dragon.txt
 
   deploy_job_3:
-      runs-on: ubuntu-latest # Each jon need VM (Ubuntu, Windows, Macs)
-      steps:
+    needs: [build_job_1, build_job_2]
+    runs-on: ubuntu-latest # Each jon need VM (Ubuntu, Windows, Macs)
+    steps:
         - name: Read File
           run: cat dragon.txt
 
