--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -16,39 +16,47 @@ jobs:
 
       - name: Run cowsay
         run: |
-          # note: fixed filename to "dragon.txt" (you had "gragon.txt" which may be a typo)
+          # write to "dragon.txt"
           cowsay -f dragon "Run cover, I am a DRAGON.....RAWR" >> dragon.txt
 
       - name: Sleep for 30 seconds
         run: sleep 30
+
       - name: Upload Dragon text file
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: my-dragon-text-file
-          path: path/to/artifact/world.txt
+          path: dragon.txt
 
   build_job_2:
     needs: build_job_1
     runs-on: ubuntu-latest
     steps:
       - name: Download Dragon text file
-      - uses: actions/upload-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: my-dragon-text-file
+          path: .
 
-      - name: sleep for 10 seconds
+      - name: Sleep for 10 seconds
         run: sleep 10
 
       - name: Test File Exists
-        run: grep -i "dragon" dragon.txt
+        run: |
+          echo "Listing workspace files:"
+          ls -la
+          echo "Grep for 'dragon' in dragon.txt:"
+          grep -i "dragon" dragon.txt
 
   deploy_job_3:
     needs: [build_job_1, build_job_2]
-    runs-on: ubuntu-latest # Each jon need VM (Ubuntu, Windows, Macs)
+    runs-on: ubuntu-latest
     steps:
       - name: Download Dragon text file
-      - uses: actions/upload-artifact@v3
-      - name: my-dragon-text-file
+        uses: actions/download-artifact@v4
+        with:
+          name: my-dragon-text-file
+          path: .
 
       - name: Read File
         run: cat dragon.txt
