fix(nya-0007): added docker file

--- a/.github/workflows/variables-secrets.yml
+++ b/.github/workflows/variables-secrets.yml
@@ -141,6 +141,7 @@ name: Exploring variables and Secrets
 #######################################################################
 
 # Build and push Docker image to GitHub Container Registry (ghcr.io) using GITHUB_TOKEN
+
 on:
   push:
     branches: [ main ]
@@ -162,6 +163,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Debug workspace (show files and confirm Dockerfile)
+        run: |
+          echo "PWD=$(pwd)"
+          ls -la
+          echo "Recursive listing (depth 3):"
+          find . -maxdepth 3 -type f -print
+
       - name: Set up QEMU (for multi-platform)
         uses: docker/setup-qemu-action@v2
 
@@ -182,7 +190,9 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
 
       - name: Set job output (image)
         id: set-output
@@ -212,6 +222,7 @@ jobs:
           docker run -d --name gha-nginx -p 8080:80 $IMAGE
           sleep 2
           curl -f http://localhost:8080 || (echo "smoke test failed" && exit 1)
+
       - name: Cleanup
         if: always()
         run: docker rm -f gha-nginx || true
