fix(nya-0007): added docker file

--- a/.github/workflows/variables-secrets.yml
+++ b/.github/workflows/variables-secrets.yml
@@ -142,41 +142,98 @@ name: Exploring variables and Secrets
 
 # Build and push Docker image to GitHub Container Registry (ghcr.io) using GITHUB_TOKEN
 
+# CI: build Spring Boot jar (Maven), upload artifact, download artifact, build & push image to GHCR
 on:
   push:
+    branches: [ main ]
+  pull_request:
     branches: [ main ]
 
 permissions:
   contents: read
-  packages: write   # required to push to GHCR
+  packages: write
   id-token: write
 
 env:
-  IMAGE_NAME: github-actions-nginx
+  IMAGE_NAME: springboot-app
 
 jobs:
-  build-and-push:
+  build:
+    name: Build and package (Maven)
     runs-on: ubuntu-latest
     outputs:
-      image: ${{ steps.set-output.outputs.image }}
+      jar-path: ${{ steps.set-jar.outputs.jar_path }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Debug workspace (show files and confirm Dockerfile)
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '17'
+          cache: maven
+
+      - name: Build and run tests
+        run: mvn -B clean verify
+
+      - name: Package (skip tests for packaging step)
+        run: mvn -B package -DskipTests
+
+      - name: Prepare deploy folder and copy jar
+        run: |
+          mkdir -p deploy
+          JAR=$(ls target/*.jar | head -n 1 || true)
+          echo "Found jar: $JAR"
+          if [ -z "$JAR" ]; then
+            echo "ERROR: No jar found in target/ — failing the job"
+            ls -la target || true
+            exit 1
+          fi
+          cp "$JAR" deploy/app.jar
+          ls -la deploy
+
+      - name: Upload jar artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: springboot-jar
+          path: deploy/app.jar
+
+      - name: Set job output (jar path)
+        id: set-jar
+        run: echo "jar_path=deploy/app.jar" >> $GITHUB_OUTPUT
+
+  docker:
+    name: Build & push Docker image to GHCR
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download built jar
+        uses: actions/download-artifact@v4
+        with:
+          name: springboot-jar       # MUST match the upload name above
+          path: ./deploy
+
+      - name: Confirm deploy contents (debug)
         run: |
           echo "PWD=$(pwd)"
+          echo "Root listing:"
           ls -la
-          echo "Recursive listing (depth 3):"
-          find . -maxdepth 3 -type f -print
+          echo "deploy listing (should contain app.jar):"
+          ls -la deploy || true
+          echo "Find files:"
+          find . -maxdepth 4 -type f -print
 
-      - name: Set up QEMU (for multi-platform)
+      - name: Set up QEMU (for buildx)
         uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry (ghcr)
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -184,7 +241,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push image
-        id: build
+        id: build-push
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -194,35 +251,5 @@ jobs:
             ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
             ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
 
-      - name: Set job output (image)
-        id: set-output
-        run: |
-          echo "image=ghcr.io/${GITHUB_REPOSITORY_OWNER}/${IMAGE_NAME}:latest" >> $GITHUB_OUTPUT
-        env:
-          IMAGE_NAME: ${{ env.IMAGE_NAME }}
-          GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
-
-  deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    steps:
-      - name: Log in to GHCR for deploy job
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Pull and run image (runner-local test)
-        env:
-          IMAGE: ${{ needs.build-and-push.outputs.image }}
-        run: |
-          echo "Using image: $IMAGE"
-          docker rm -f gha-nginx || true
-          docker run -d --name gha-nginx -p 8080:80 $IMAGE
-          sleep 2
-          curl -f http://localhost:8080 || (echo "smoke test failed" && exit 1)
-
-      - name: Cleanup
-        if: always()
-        run: docker rm -f gha-nginx || true
+      - name: Print pushed image (non-secret)
+        run: echo "Pushed ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest"
