fix(nya-0009): added poperties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=nya-master
+# Use in-memory H2 for local testing
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Optional: keep Liquibase enabled for migrations, or set to false to skip migrations
+spring.liquibase.enabled=true
+# logging to help debug DB connections
+logging.level.org.springframework.jdbc=DEBUG
