--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,5 +1,9 @@
 name: My First Workflow
-on: push
+on:
+  workflow_dispatch:
+#  schedule:
+#    - cron: "*/1 * * * *"
+#  push
 
 jobs:
     first_job:
