fix(nya-9002): changes for if the any owrkflow already running and again trying to run the same workflow at job level cancelling the existing jobs

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -7,6 +7,9 @@ on:
 
 jobs:
     first_job:
+      concurrency:
+        group: production-deployment
+        cancel-in-progress: true
         runs-on: ubuntu-latest
         steps:
           - name: checkout Repo
