--- a/.github/workflows/matrix-configuration.yaml
+++ b/.github/workflows/matrix-configuration.yaml
@@ -9,10 +9,17 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
+      fail-fast: false
+      max-parallel: 2
       matrix:
         os: [ubuntu-latest, ubuntu-20.04, windows-latest]
         images: [hello-world, alpine]
-
+        exclude:
+          - images: alpine
+            os: windows-latest
+            includes:
+              - images: amd64/alpine
+                os: ubuntu-latest
     steps:
       - name: Echo Docker details
         run: docker info
