--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,3 +21,10 @@ jobs:
           - name: Read file
             run: cat README.md
 
+    first_job_2:
+      if: github.ref == 'refs/heads/main'
+      needs: first_job
+      steps:
+            - name: Welcome message
+              run: echo "My first Github Actions job"
+
